redis, 게시글 작성, 로그인, 관계자 인증 감시추가